# llama

./: .gitmodules  README.md  flutter.sh  readme.md
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
examples/chatgpt_app/: .gitignore  README.md  pubspec.yaml
examples/chatgpt_app/.github/workflows/: beta_compile.yaml
examples/chatgpt_app/android/app/: build.gradle
examples/chatgpt_app/android/app/src/main/: AndroidManifest.xml
examples/chatgpt_app/android/app/src/main/kotlin/com/example/chatgpt_app/: MainActivity.kt
examples/chatgpt_app/android/app/src/profile/: AndroidManifest.xml
examples/chatgpt_app/ios/Runner/: Info.plist
examples/chatgpt_app/lib/: main.dart
examples/chatgpt_app/linux/: CMakeLists.txt  my_application.cc
examples/chatgpt_app/linux/packagex/DEBIAN/: control  postinst  postrm
examples/chatgpt_app/linux/packagex/usr/share/applications/: app-template.desktop
examples/chatgpt_app/macos/Runner.xcodeproj/: project.pbxproj
examples/chatgpt_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
examples/chatgpt_app/macos/Runner/Configs/: AppInfo.xcconfig
examples/chatgpt_app/release/: Dockerfile
examples/chatgpt_app/test/: widget_test.dart
examples/chatgpt_app/web/: index.html  manifest.json
examples/chatgpt_app/windows/: CMakeLists.txt
examples/chatgpt_app/windows/packagex/: .gitignore
examples/chatgpt_app/windows/runner/: Runner.rc  main.cpp
native_lib/: .gitignore  CMakeLists.txt  llama.cpp  main.cpp  readme.md  update.sh
package/llama_dart/: pubspec.yaml
package/llama_dart/generate_scheme/: generate_scheme.dart
package/llama_dart/ios/packagex/: .gitignore
package/llama_dart/lib/: llama_dart.dart
package/llama_dart/lib/scheme/: answer.dart  ask.dart  scheme.dart
package/llama_dart/linux/packagex/DEBIAN/: control  postinst  postrm
package/llama_dart/linux/packagex/usr/share/applications/: llama-dart.desktop
package/llama_dart/test/: llama_dart_test.dart
package/llama_flutter/: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
package/llama_flutter/android/: build.gradle  settings.gradle
package/llama_flutter/android/packagex/: .gitignore
package/llama_flutter/android/src/main/: AndroidManifest.xml
package/llama_flutter/example/: README.md  pubspec.yaml
package/llama_flutter/example/android/app/: build.gradle
package/llama_flutter/example/android/app/src/debug/: AndroidManifest.xml
package/llama_flutter/example/android/app/src/main/: AndroidManifest.xml
package/llama_flutter/example/android/app/src/main/kotlin/com/example/llama_flutter_example/: MainActivity.kt
package/llama_flutter/example/ios/Runner/: Info.plist
package/llama_flutter/example/ios/Runner.xcodeproj/: project.pbxproj
package/llama_flutter/example/lib/: main.dart
package/llama_flutter/example/linux/: CMakeLists.txt  my_application.cc
package/llama_flutter/example/linux/flutter/: generated_plugins.cmake
package/llama_flutter/example/linux/packagex/DEBIAN/: control  postinst
package/llama_flutter/example/macos/Runner.xcodeproj/: project.pbxproj
package/llama_flutter/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
package/llama_flutter/example/macos/Runner/Configs/: AppInfo.xcconfig
package/llama_flutter/example/macos/packagex/: .gitignore
package/llama_flutter/example/windows/: CMakeLists.txt
package/llama_flutter/example/windows/flutter/: generated_plugins.cmake
package/llama_flutter/example/windows/runner/: Runner.rc  main.cpp
package/llama_flutter/ios/: llama_flutter.podspec
package/llama_flutter/ios/Classes/: llama_flutter.cpp
package/llama_flutter/lib/: llama_flutter.dart
package/llama_flutter/linux/: CMakeLists.txt
package/llama_flutter/linux/packagex/DEBIAN/: postinst
package/llama_flutter/macos/: llama_flutter.podspec
package/llama_flutter/macos/Classes/: llama_flutter.cpp
package/llama_flutter/src/: CMakeLists.txt
package/llama_flutter/windows/: CMakeLists.txt
